flux/apps/base/pvr/lidarr/network-policies.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: lidarr
  namespace: pvr
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: lidarr
  egress:
    - toEntities:
        - all
  ingress:
    - fromEntities:
        - all
